--- a/HealthPassportDataManagment/Views/DiseaseDescriptions/Create.cshtml
+++ b/HealthPassportDataManagment/Views/DiseaseDescriptions/Create.cshtml
@@ -19,22 +19,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="Information" class="control-label"></label>
-                <input asp-for="Information" class="form-control" />
+                <textarea asp-for="Information" class="form-control"></textarea>
                 <span asp-validation-for="Information" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Symptoms" class="control-label"></label>
-                <input asp-for="Symptoms" class="form-control" />
+                <textarea asp-for="Symptoms" class="form-control"></textarea>
                 <span asp-validation-for="Symptoms" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Treatment" class="control-label"></label>
-                <input asp-for="Treatment" class="form-control" />
+                <textarea asp-for="Treatment" class="form-control"></textarea>
                 <span asp-validation-for="Treatment" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Vaccination" class="control-label"></label>
-                <input asp-for="Vaccination" class="form-control" />
+                <textarea asp-for="Vaccination" class="form-control"></textarea>
                 <span asp-validation-for="Vaccination" class="text-danger"></span>
             </div>
             <div class="form-group">
