Project names changed to ImmunisationPass

--- a/HealthPassportDataManagment/Views/DiseaseDescriptions/Edit.cshtml
+++ b/HealthPassportDataManagment/Views/DiseaseDescriptions/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model HealthPassportApi.DataModels.DiseaseDescription
+﻿@model ImmunisationPass.DataModels.DiseaseDescription
 
 @{
     ViewData["Title"] = "Edit "+Model.Name;
