--- a/HealthPassportDataManagment/Views/DiseaseDescriptions/Index.cshtml
+++ b/HealthPassportDataManagment/Views/DiseaseDescriptions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HealthPassportApi.DataModels.DiseaseDescription>
+﻿@model IEnumerable<ImmunisationPass.DataModels.DiseaseDescription>
 
 @{
     ViewData["Title"] = "Index";
