--- a/HealthPassportDataManagment/Views/ImmuntisationStatus/Edit.cshtml
+++ b/HealthPassportDataManagment/Views/ImmuntisationStatus/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model HealthPassportApi.DataModels.ImmuntisationStatus
+﻿@model ImmunisationPass.DataModels.ImmuntisationStatus
 
 @{
     ViewData["Title"] = "Edit";
