--- a/HealthPassportDataManagment/Views/ImmuntisationStatus/Index.cshtml
+++ b/HealthPassportDataManagment/Views/ImmuntisationStatus/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HealthPassportApi.DataModels.ImmuntisationStatus>
+﻿@model IEnumerable<ImmunisationPass.DataModels.ImmuntisationStatus>
 
 @{
     ViewData["Title"] = "Index";
