--- a/HealthPassportDataManagment/Views/InteractionTrackings/Delete.cshtml
+++ b/HealthPassportDataManagment/Views/InteractionTrackings/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model HealthPassportApi.DataModels.InteractionTracking
+﻿@model ImmunisationPass.DataModels.InteractionTracking
 
 @{
     ViewData["Title"] = "Delete";
