--- a/HealthPassportDataManagment/Views/InteractionTrackings/Index.cshtml
+++ b/HealthPassportDataManagment/Views/InteractionTrackings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HealthPassportApi.DataModels.InteractionTracking>
+﻿@model IEnumerable<ImmunisationPass.DataModels.InteractionTracking>
 
 @{
     ViewData["Title"] = "Index";
