--- a/HealthPassportDataManagment/Views/_ViewImports.cshtml
+++ b/HealthPassportDataManagment/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using HealthPassportDataManagment
-@using HealthPassportDataManagment.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
